# prompt_classifier

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  mkdocs.yml  output.json  pyproject.toml
.github/workflows/: test.yml
data/: malicious.json
docs/: index.md
src/: bayes_classifier.py  config.py  csv_ingest.py  evaluate.py  generator.py  likelihood.py  main.py  preprocess.py
tests/: conftest.py  test_bayes_classifier.py  test_config.py  test_csv_ingest.py  test_csv_injest.py  test_evaluate.py  test_generator.py  test_likelihood.py  test_main.py  test_preprocess.py
