[project]
name = "prompt-classifier"
version = "0.1.0"
description = "Bayesian system for detecting prompt injections in LLM chat sessions"
dependencies = ["pandas", "openai", "tqdm", "pydantic", "pgmpy"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black", "isort", "mypy", "pre-commit"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-select = ["I", "E", "F"]
